--- a/androidgcs/res/layout/tablet_control.xml
+++ b/androidgcs/res/layout/tablet_control.xml
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/pfd"
-        android:text="Flight Mode: "
+        android:text="@string/flight_mode_"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -114,15 +114,15 @@
             android:textOff="Land"
             android:textOn="Land" />
 
-        <ToggleButton
-            android:id="@+id/cameraPoiButton"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:onClick="onToggle"
-            android:textOff="POI"
-            android:textOn="POI" />
-
     </RadioGroup>
+
+    <ToggleButton
+	    android:id="@+id/cameraPoiButton"
+	    android:layout_width="150dp"
+	    android:layout_height="wrap_content"
+	    android:onClick="onPoiToggle"
+	    android:textOff="POI Track"
+	    android:textOn="POI Track" />
 
     <TextView
         android:id="@+id/armedStatus"
@@ -130,7 +130,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/flightMode"
         android:layout_below="@+id/flightMode"
-        android:text="Disarmed"
+        android:text="@string/disarmed"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
@@ -140,7 +140,7 @@
         android:layout_alignBaseline="@+id/armedStatus"
         android:layout_alignBottom="@+id/armedStatus"
         android:layout_toLeftOf="@+id/armedStatus"
-        android:text="Armed: "
+        android:text="@string/armed_"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </RelativeLayout>
