--- a/ground/gcs/src/plugins/config/modulesettingsform.ui
+++ b/ground/gcs/src/plugins/config/modulesettingsform.ui
@@ -464,7 +464,7 @@ p, li { white-space: pre-wrap; }
     </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QGroupBox" name="groupBox_6">
+    <widget class="QGroupBox" name="gb_OveroSync">
      <property name="title">
       <string>OveroSync</string>
      </property>
