--- a/ground/gcs/src/plugins/config/modulesettingsform.ui
+++ b/ground/gcs/src/plugins/config/modulesettingsform.ui
@@ -22,6 +22,9 @@
    </property>
    <item>
     <widget class="QScrollArea" name="scrollArea">
+     <property name="frameShape">
+      <enum>QFrame::NoFrame</enum>
+     </property>
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
@@ -30,8 +33,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>779</width>
-        <height>816</height>
+        <width>781</width>
+        <height>818</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_3">
@@ -52,18 +55,6 @@
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
            <widget class="QGroupBox" name="gb_GPS">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>70</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>70</height>
-             </size>
-            </property>
             <property name="title">
              <string>GPS</string>
             </property>
@@ -94,18 +85,6 @@
           </item>
           <item>
            <widget class="QGroupBox" name="gb_Airspeed">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>281</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>281</height>
-             </size>
-            </property>
             <property name="title">
              <string>Airspeed</string>
             </property>
@@ -215,18 +194,6 @@
           </item>
           <item>
            <widget class="QGroupBox" name="gb_VibrationAnalysis">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>141</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>141</height>
-             </size>
-            </property>
             <property name="title">
              <string>Vibration Analysis</string>
             </property>
@@ -310,18 +277,6 @@
          <layout class="QVBoxLayout" name="verticalLayout_2">
           <item>
            <widget class="QGroupBox" name="gb_Battery">
-            <property name="minimumSize">
-             <size>
-              <width>0</width>
-              <height>440</height>
-             </size>
-            </property>
-            <property name="maximumSize">
-             <size>
-              <width>16777215</width>
-              <height>440</height>
-             </size>
-            </property>
             <property name="title">
              <string>Battery</string>
             </property>
