Increased number of visible significant digits in battery calibration fields.

--- a/ground/gcs/src/plugins/config/modulesettingsform.ui
+++ b/ground/gcs/src/plugins/config/modulesettingsform.ui
@@ -374,8 +374,14 @@
                 </item>
                 <item row="1" column="1">
                  <widget class="QDoubleSpinBox" name="sb_voltageCalibration">
+                  <property name="decimals">
+                   <number>6</number>
+                  </property>
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
                   <property name="singleStep">
-                   <double>0.100000000000000</double>
+                   <double>0.000010000000000</double>
                   </property>
                  </widget>
                 </item>
@@ -453,8 +459,14 @@
                 </item>
                 <item row="1" column="1">
                  <widget class="QDoubleSpinBox" name="sb_currentCalibration">
+                  <property name="decimals">
+                   <number>6</number>
+                  </property>
+                  <property name="maximum">
+                   <double>1.000000000000000</double>
+                  </property>
                   <property name="singleStep">
-                   <double>0.100000000000000</double>
+                   <double>0.000010000000000</double>
                   </property>
                  </widget>
                 </item>
