--- a/androidgcs/res/layout/map_layout.xml
+++ b/androidgcs/res/layout/map_layout.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- This layout is used by the Map activity -->
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
 	android:id="@+id/map"
 	android:layout_width="match_parent"
