--- a/ground/gcs/src/plugins/config/modulesettingsform.ui
+++ b/ground/gcs/src/plugins/config/modulesettingsform.ui
@@ -207,7 +207,7 @@
              <item row="0" column="0">
               <widget class="QLabel" name="label_10">
                <property name="text">
-                <string>Sample rate</string>
+                <string>Sample rate:</string>
                </property>
               </widget>
              </item>
@@ -363,7 +363,11 @@
                  </widget>
                 </item>
                 <item row="0" column="1">
-                 <widget class="QLineEdit" name="le_liveVoltageReading"/>
+                 <widget class="QLineEdit" name="le_liveVoltageReading">
+                  <property name="readOnly">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
                 </item>
                 <item row="1" column="0">
                  <widget class="QLabel" name="label_13">
@@ -471,7 +475,11 @@
                  </widget>
                 </item>
                 <item row="0" column="1">
-                 <widget class="QLineEdit" name="le_liveCurrentReading"/>
+                 <widget class="QLineEdit" name="le_liveCurrentReading">
+                  <property name="readOnly">
+                   <bool>true</bool>
+                  </property>
+                 </widget>
                 </item>
                </layout>
               </widget>
